--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "test-monster-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://CianGibbons.github.io/MonsterRolodex",
+  "homepage": "https://ciangibbons.github.io/MonsterRolodex/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
